RAS-68: Create page not founc page

--- a/app/views/match_not_found.scala.html
+++ b/app/views/match_not_found.scala.html
@@ -1,4 +1,4 @@
-/*
+@*
  * Copyright 2017 HM Revenue & Customs
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
@@ -12,25 +12,19 @@
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
- */
+ *@
 
-package controllers
+@(residencyStatusResult: ResidencyStatusResult)(implicit request: Request[_], context: config.RasContext, messages: Messages)
 
-import config.RasContextImpl
-import models.ResidencyStatusResult
-import play.api.mvc.Action
+@import uk.gov.hmrc.play.views.html._
+@import uk.gov.hmrc.play.views.html.helpers._
 
-import scala.concurrent.Future
+@ras_main(title = Messages("match.not.found.page.title")) {
 
-object MatchFoundController extends MatchFoundController
+  <a id="print-this-page" href="javascript:window.print();">@Messages("print.this.page")</a>
 
-trait MatchFoundController extends RasController {
+  <h1 id="match-not-found">MATCH NOT FOUND</h1>
 
-  implicit val context: config.RasContext = RasContextImpl
 
-  def get = Action.async {
-    implicit request =>
-        Future.successful(Ok(views.html.match_found(ResidencyStatusResult("TEST","","","","","",""))))
-  }
 
 }
