--- a/app/views/match_not_found.scala.html
+++ b/app/views/match_not_found.scala.html
@@ -21,9 +21,8 @@
 
 @ras_main(title = Messages("match.not.found.page.title")) {
 
-  <a id="print-this-page" href="javascript:window.print();">@Messages("print.this.page")</a>
 
-  <h1 id="match-not-found">MATCH NOT FOUND</h1>
+  <h1 id="match-not-found">@Messages("member.details.not.found")</h1>
 
 
 
