--- a/app/views/match_not_found.scala.html
+++ b/app/views/match_not_found.scala.html
@@ -21,40 +21,61 @@
 
 @ras_main(title = Messages("match.not.found.page.title")) {
 
+<div class="grid-row">
 
-  <h1 id="match-not-found">@Messages("member.details.not.found")</h1>
+  <div class="column-full">
 
-  <p id="subheader">@Messages("match.not.found.subheader")</p>
+      <br>
+      <h1 id="match-not-found">@Messages("member.details.not.found")</h1>
 
-  <p id="name-label">@Messages("name").capitalize</p>
-  <p id="name">@name</p>
+      <p id="subheader">@Messages("match.not.found.subheader")</p>
 
-  <p id="dob-label">@Messages("dob").capitalize</p>
-  <p id="dob">@dateOfBirth</p>
 
-  <p id="nino-label">@Messages("nino")</p>
-  <p id="nino">@nino</p>
+      <table>
+        <tbody>
 
-  <div>
-   <a id="try-again" class="button" href="" role="button" >@Messages("try.again")</a>
+        <tr>
+          <th id="name-label">@Messages("name").capitalize</th>
+          <td id="name">@name</td>
+        </tr>
+
+        <tr>
+          <th id="dob-label">@Messages("dob").capitalize</th>
+          <td id="dob">@dateOfBirth</td>
+        </tr>
+
+        <tr>
+          <th id="nino-label">@Messages("nino")</th>
+          <td id="nino">@nino</td>
+        </tr>
+
+        </tbody>
+      </table>
+
+      <div>
+       <a id="try-again" class="button" href="" role="button" >@Messages("try.again")</a>
+      </div>
+
+      <br>
+
+      <div data-accordion
+           data-accordion-animate
+           aria-expanded="false"
+           class="accordion__body__row--no-border">
+
+         <a data-accordion-arrow class="accordion__button link--no-underline bold-small" href="" data-accordion-button role="button">
+          @Messages("tried")
+         </a>
+
+         <div class="accordion__body" aria-expanded="false" data-accordion-body aria-hidden="true">
+          <p>@Messages("tried.confirm.details")</p>
+          <p>@Messages("tried.guidance")
+           <a id="confirm-nino" href="https://www.gov.uk/government/organisations/hm-revenue-customs/contact/national-insurance-numbers">@Messages("confirm.nino.link")</a>.
+          </p>
+         </div>
+      </div>
+
   </div>
 
-<br>
-  <div data-accordion
-       data-accordion-animate
-       aria-expanded="false"
-       class="accordion__body__row--no-border">
-
-     <a data-accordion-arrow class="accordion__button link--no-underline bold-small" href="" data-accordion-button role="button">
-      @Messages("tried")
-     </a>
-
-     <div class="accordion__body" aria-expanded="false" data-accordion-body aria-hidden="true">
-      <p>@Messages("tried.confirm.details")</p>
-      <p>@Messages("tried.guidance")
-       <a id="confirm-nino" href="https://www.gov.uk/government/organisations/hm-revenue-customs/contact/national-insurance-numbers">@Messages("confirm.nino.link")</a>.
-      </p>
-     </div>
-  </div>
-
+</div>
 }
