RAS-491c: Fix try again button

--- a/app/views/match_not_found.scala.html
+++ b/app/views/match_not_found.scala.html
@@ -53,7 +53,7 @@
       </table>
 
       <div>
-       <a id="try-again" class="button" href="" role="button" >@Messages("try.again")</a>
+       <a id="try-again" class="button" href="@routes.MemberDetailsController.get" role="button" >@Messages("try.again")</a>
       </div>
 
       <br>
