RAS-491d: Resolve session cleaning issue

--- a/app/views/member_details.scala.html
+++ b/app/views/member_details.scala.html
@@ -77,6 +77,7 @@
                 @views.html.helpers.groupError(memberDetailsForm("dateOfBirth"))
 
                 @if(!memberDetailsForm.data.isEmpty &&
+                    !memberDetailsForm.data.exists(_ == ("nino","")) &&
                     memberDetailsForm.data("dateOfBirth.day") == "" &&
                     memberDetailsForm.data("dateOfBirth.month") == "" &&
                     memberDetailsForm.data("dateOfBirth.year") == ""){
