RAS-491d: Refactor session controller

--- a/app/views/match_not_found.scala.html
+++ b/app/views/match_not_found.scala.html
@@ -53,7 +53,7 @@
       </table>
 
       <div>
-       <a id="try-again" class="button" href="@routes.SessionController.cleanAndRedirect("MemberDetails")" role="button" >@Messages("try.again")</a>
+       <a id="try-again" class="button" href="@routes.SessionController.cleanAndRedirect("member-details")" role="button" >@Messages("try.again")</a>
       </div>
 
       <br>
