--- a/app/views/start_page.scala.html
+++ b/app/views/start_page.scala.html
@@ -54,7 +54,7 @@
         <a id="ras-guidance" href="https://www.gov.uk/guidance/pension-administrators-reclaim-tax-relief-using-relief-at-source">@Messages("relief.at.source.guidance")</a>.
       </p>
 
-      <a class="button button--get-started" href="@routes.MemberDetailsController.get" role="button" id="start">@Messages("start.now")</a>
+      <a class="button button--get-started" href="@routes.MemberNameController.get" role="button" id="start">@Messages("start.now")</a>
 
     </div>
 
