--- a/app/views/member_name.scala.html
+++ b/app/views/member_name.scala.html
@@ -14,28 +14,31 @@
  * limitations under the License.
  *@
 
-@(nameForm: Form[models.MemberName])(implicit request: Request[_], context: config.RasContext, messages: Messages)
+@(memberNameform: Form[models.MemberName])(implicit request: Request[_], context: config.RasContext, messages: Messages)
 
 @import uk.gov.hmrc.play.views.html._
 @import uk.gov.hmrc.play.views.html.helpers._
 @import views.html.helpers._
 
-@ras_main(title = "member-details") {
+@ras_main(title = Messages("member.name.page.title")) {
 
-@views.html.helpers.errorSummary(nameForm)
+@views.html.helpers.errorSummary(memberNameform)
 
  <div class="grid-row">
 
   <div class="column-full">
 
-   <h1 id="header" class="heading-xlarge">What is the member's name?</h1>
+   <h1 id="header" class="heading-xlarge">@Messages("member.name.page.header")</h1>
+
+    <p id="sub-header">@Messages("member.name.page.sub-header")</p>
+
 
      @form(action = routes.MemberNameController.post) {
 
        <div class="form-group">
 
          <div>
-          @rasInput(nameForm("firstName"),
+          @rasInput(memberNameform("firstName"),
           '_label -> Html(Messages("first.name").capitalize),
            '_labelClass -> "form-label-bold",
           '_id -> "firstName",
@@ -43,7 +46,7 @@
          </div>
 
          <div>
-          @rasInput(nameForm("lastName"),
+          @rasInput(memberNameform("lastName"),
           '_label -> Html(Messages("last.name").capitalize),
            '_labelClass -> "form-label-bold",
           '_id -> "lastName",
