--- a/app/views/includes/report_problem.scala.html
+++ b/app/views/includes/report_problem.scala.html
@@ -14,13 +14,13 @@
  * limitations under the License.
  *@
 
-@import uk.gov.hmrc.play.http.HeaderCarrier
 @import connectors._
 @import scala.concurrent.Await
 @import scala.concurrent.duration._
+@import uk.gov.hmrc.play.HeaderCarrierConverter
 
 @(supportLinkEnabled: Boolean)(implicit request: Request[_], context: config.RasContext)
 
 @if(supportLinkEnabled) {
-    @Html(Await.result(context.getPageHelpPartial()(HeaderCarrier.fromHeadersAndSession(request.headers)), 5 seconds))
+    @Html(Await.result(context.getPageHelpPartial()(HeaderCarrierConverter.fromHeadersAndSession(request.headers)), 5 seconds))
 }
