RAS-501: Add member name on nino page

--- a/app/views/member_nino.scala.html
+++ b/app/views/member_nino.scala.html
@@ -14,7 +14,7 @@
  * limitations under the License.
  *@
 
-@(memberNinoForm: Form[models.MemberNino])(implicit request: Request[_], context: config.RasContext, messages: Messages)
+@(memberNinoForm: Form[models.MemberNino], name:String)(implicit request: Request[_], context: config.RasContext, messages: Messages)
 
 @import uk.gov.hmrc.play.views.html._
 @import uk.gov.hmrc.play.views.html.helpers._
@@ -28,7 +28,7 @@
 
   <div class="column-full">
 
-   <h1 id="header" class="heading-xlarge">@Messages("member.nino.page.header")</h1>
+   <h1 id="header" class="heading-xlarge">@Messages("member.nino.page.header", name)</h1>
 
     <p id="sub-header">@Messages("nino.hint")</p>
 
