RAS-501:Added dob controller get

--- a/app/views/member_nino.scala.html
+++ b/app/views/member_nino.scala.html
@@ -33,7 +33,7 @@
     <p id="sub-header">@Messages("nino.hint")</p>
 
 
-     @form(action = routes.MemberNinoController.get) {
+     @form(action = routes.MemberNinoController.post) {
 
        <div class="form-group">
 
