--- a/app/views/member_dob.scala.html
+++ b/app/views/member_dob.scala.html
@@ -28,7 +28,7 @@
 
  <div class="column-full">
 
-  <h1 id="header" class="heading-xlarge">@Messages("member.dob.page.header",name)</h1>
+  <h1 id="header" class="heading-xlarge">@Messages("member.dob.page.header",name.capitalize)</h1>
 
   @form(action = routes.MemberDOBController.post) {
 
@@ -132,8 +132,9 @@
 
        </div>
    
-       </fieldset>
+            </fieldset>
 
+           </div>
        <div>
         <button class="button" type="submit" id="continue">@Messages("continue")</button>
        </div>
