--- a/app/views/member_name.scala.html
+++ b/app/views/member_name.scala.html
@@ -40,7 +40,7 @@
          <div>
           @rasInput(memberNameForm("firstName"),
           '_label -> Html(Messages("first.name").capitalize),
-           '_labelClass -> "form-label-bold",
+           '_labelClass -> "form-label",
           '_id -> "firstName",
           '_maxLength -> 35)
          </div>
@@ -48,7 +48,7 @@
          <div>
           @rasInput(memberNameForm("lastName"),
           '_label -> Html(Messages("last.name").capitalize),
-           '_labelClass -> "form-label-bold",
+           '_labelClass -> "form-label",
           '_id -> "lastName",
           '_maxLength -> 35)
          </div>
