--- a/app/views/member_nino.scala.html
+++ b/app/views/member_nino.scala.html
@@ -28,10 +28,7 @@
 
   <div class="column-full">
 
-   <h1 id="header" class="heading-xlarge">@Messages("member.nino.page.header", name)</h1>
-
-    <p id="sub-header">@Messages("nino.hint")</p>
-
+   <h1 id="header" class="heading-xlarge">@Messages("member.nino.page.header", name.capitalize)</h1>
 
      @form(action = routes.MemberNinoController.post) {
 
@@ -39,7 +36,6 @@
 
         <div>
          @rasInput(memberNinoForm("nino"),
-         '_label -> Html(Messages("nino")),
          '_labelClass -> "form-label-bold",
          '_id -> "nino",
          '_maxLength -> 15,
