--- a/app/views/member_name.scala.html
+++ b/app/views/member_name.scala.html
@@ -28,6 +28,10 @@
 
   <div class="column-full">
 
+   <div>
+    <a href="@routes.SessionController.redirect("start",false)">@Messages("back")</a>
+   </div>
+
    <h1 id="header" class="heading-xlarge">@Messages("member.name.page.header")</h1>
 
     <p id="sub-header">@Messages("member.name.page.sub-header")</p>
