--- a/app/views/member_name.scala.html
+++ b/app/views/member_name.scala.html
@@ -28,8 +28,8 @@
 
   <div class="column-full">
 
-   <div>
-    <a href="@routes.SessionController.redirect("start",false)">@Messages("back")</a>
+   <div class="back-arrow">
+    <a class="link-back" href="@routes.SessionController.redirect("start",false)">@Messages("back")</a>
    </div>
 
    <h1 id="header" class="heading-xlarge">@Messages("member.name.page.header")</h1>
