--- a/app/views/match_found.scala.html
+++ b/app/views/match_found.scala.html
@@ -44,8 +44,8 @@
         <tbody>
 
         <tr>
-          <th>Tax year</th>
-          <th>Location</th>
+          <th id="tax-year-header">@Messages("tax.year")</th>
+          <th id="location-header">@Messages("location")</th>
         </tr>
 
         <tr>
