--- a/app/views/match_found.scala.html
+++ b/app/views/match_found.scala.html
@@ -36,9 +36,9 @@
 
       <br>
 
-      <h1 id="header">@Messages(name,"match.found.header")</h1>
+      <h1 id="header">@Messages("match.found.header",name)</h1>
 
-      <p id="sub-header">@Messages(name,"match.found.sub-header",currentTaxYear.toString,(currentTaxYear + 1).toString,(currentTaxYear + 2).toString)</p>
+      <p id="sub-header">@Messages("match.found.sub-header",name ,currentTaxYear.toString,(currentTaxYear + 1).toString,(currentTaxYear + 2).toString)</p>
 
       <table>
         <tbody>
@@ -49,10 +49,9 @@
         </tr>
 
         <tr>
-          <td id="cy-tax-year-period">@Messages(currentTaxYear.toString, (currentTaxYear + 1).toString)</td>
+          <td id="cy-tax-year-period">@Messages("tax.year.period", currentTaxYear.toString, (currentTaxYear + 1).toString)</td>
           <td id="cy-residency-status">@currentYearResidencyStatus</td>
         </tr>
-
 
         </tbody>
       </table>
