--- a/app/views/match_not_found.scala.html
+++ b/app/views/match_not_found.scala.html
@@ -38,48 +38,33 @@
       <table>
         <tbody>
 
-        <tr>
-          <td id="name">@name</td>
-          <td id="change-name"><a href="@routes.SessionController.redirect("member-name",false)">@Messages("change")</a></td>
-        </tr>
+          <tr>
+            <td id="name">@name</td>
+            <td id="change-name"><a href="@routes.SessionController.redirect("member-name",false)">@Messages("change")</a></td>
+          </tr>
 
-        <tr>
-          <td id="nino">@nino</td>
-          <td id="change-nino"><a href="@routes.SessionController.redirect("member-nino",false)">@Messages("change")</a></td>
-        </tr>
+          <tr>
+            <td id="nino">@nino</td>
+            <td id="change-nino"><a href="@routes.SessionController.redirect("member-nino",false)">@Messages("change")</a></td>
+          </tr>
 
-        <tr>
-          <td id="dob">@dateOfBirth</td>
-          <td id="change-dob"><a href="@routes.SessionController.redirect("member-dob",false)">@Messages("change")</a></td>
-        </tr>
-
-
+          <tr>
+            <td id="dob">@dateOfBirth</td>
+            <td id="change-dob"><a href="@routes.SessionController.redirect("member-dob",false)">@Messages("change")</a></td>
+          </tr>
 
         </tbody>
       </table>
 
+      <p id="what-to-do">@Messages("match.not.found.what.to.do")
+        <a id="contact-hmrc-link" href="https://www.gov.uk/government/organisations/hm-revenue-customs/contact/national-insurance-numbers">@Messages("contact.hmrc")</a>.
+      </p>
+
       <div>
-       <a id="try-again" class="button" href="@routes.SessionController.redirect("member-name",true)" role="button" >@Messages("try.again")</a>
+        <a id="check-another-person" href="@routes.SessionController.redirect("member-name",true)">@Messages("check.another.person")</a>
       </div>
 
-      <br>
 
-      <div data-accordion
-           data-accordion-animate
-           aria-expanded="false"
-           class="accordion__body__row--no-border">
-
-         <a data-accordion-arrow class="accordion__button link--no-underline bold-small" href="" data-accordion-button role="button">
-          @Messages("tried")
-         </a>
-
-         <div class="accordion__body" aria-expanded="false" data-accordion-body aria-hidden="true">
-          <p>@Messages("tried.confirm.details")</p>
-          <p>@Messages("tried.guidance")
-           <a id="confirm-nino" href="https://www.gov.uk/government/organisations/hm-revenue-customs/contact/national-insurance-numbers">@Messages("confirm.nino.link")</a>.
-          </p>
-         </div>
-      </div>
 
   </div>
 
