--- a/app/views/match_found.scala.html
+++ b/app/views/match_found.scala.html
@@ -56,11 +56,7 @@
 
         <tr>
           <td id="ny-tax-year-period">@Messages("tax.year.period", (currentTaxYear + 1).toString, (currentTaxYear + 2).toString)</td>
-          @if(nextYearResidencyStatus == Messages("non.scottish.taxpayer")){
-            <td id="ny-residency-status-scotland">@Messages("expected", "Scotland")</td>
-          }else{
-            <td id="ny-residency-status-uk">@Messages("expected", "UK")</td>
-          }
+          <td id="ny-residency-status">@nextYearResidencyStatus</td>
         </tr>
 
         </tbody>
