RAS-501: Add sign out link to the top of page

--- a/app/views/ras_main.scala.html
+++ b/app/views/ras_main.scala.html
@@ -25,6 +25,7 @@
   bodyClasses: Option[String] = None,
   mainClass: Option[String] = None,
   scriptElem: Option[Html] = None,
+  signOutEnabled: Boolean = true,
   supportLinkEnabled: Boolean = true)(mainContent: Html)(implicit request : Request[_], context: config.RasContext, messages: Messages)
 
 
@@ -54,5 +55,6 @@
                mainContent = layouts.article(mainContent),
                serviceInfoContent = serviceInfoContent,
                scriptElem = scriptElem,
+               signOutEnabled = signOutEnabled,
                linkElement = Some(linkElement)
 )
