--- a/app/views/govuk_wrapper.scala.html
+++ b/app/views/govuk_wrapper.scala.html
@@ -25,11 +25,13 @@
     serviceInfoContent: Html = HtmlFormat.empty,
     scriptElem: Option[Html] = None,
     linkElement : Option[Html] = None,
-    getHelpForm: Html  = HtmlFormat.empty)(implicit request: Request[_], context: config.RasContext, messages: Messages)
+    getHelpForm: Html  = HtmlFormat.empty,
+    signOutEnabled:Boolean)(implicit request: Request[_], context: config.RasContext, messages: Messages)
 
 @import layouts.{govuk_template => hmrcGovUkTemplate}
 @import uk.gov.hmrc.play.views.html.{layouts => uiLayouts}
 @import uk.gov.hmrc.play.views.html.{helpers => uiHelpers}
+@import config.ApplicationConfig
 
 @head = {
     @uiLayouts.head(
@@ -40,6 +42,7 @@
 
 @headerNavLinks = {
   <li><a id="homeNavHref" href="http://www.google.com" data-journey-click="primary-navigation:Click:Home"></a></li>
+  <li><a id="logOutStatusHref" href="@ApplicationConfig.signOutUrl">@Messages("signout")</a></li>
 }
 
 @insideHeader = {
